fixes z-index issue with back button (wasnt clickable)

--- a/src/components/AppBrowser.css
+++ b/src/components/AppBrowser.css
@@ -107,7 +107,7 @@ iframe {
   top:0; let:0;
   width:100%;
   height:100%;
-  z-index:950;
+  z-index:998;
 }
 .ae-modal ul{
   list-style-type: none;
@@ -162,7 +162,7 @@ iframe {
   left:5px;
   width:50px;
   height:50px;
-  z-index:900;
+  z-index:998;
   /*background-color:red;*/
 }
 .remove-app-btn{
